JEDIT 4.0 VERSION HISTORY

* Version 4.0pre7

+ Enhancements

- Yet-another-optimization to file loading. Directory search should be
  even faster
- Added a hack to prevent the WheelMouse plugin version 0.5 from being
  loaded under JDK 1.4
- It should now be possible to bind shortcuts to the numeric keypad,
  although this might not work perfectly on all Java implementations
- MacOS plugin version 1.1 (Kris Kopicki)
- 'Expand Folds With Level' and 'Expand All Folds' commands now scroll
  the text area to the caret position if necessary
- Documentation is now generated using DocBook-XSL 1.49, DocBook-DSSSL
  1.76

+ Bug Fixes

- First time jEdit was run, the file system's divider position would be
  such that the parent directories list would be invisible
- 'End' key didn't work properly
- Due to the changes in buffer property handling caused by the
  transition to the new document model, new files would always have the
  system default line separator and encoding, instead of the defaults
  that were specified in the 'Loading and Saving' option pane
- Changing the fold mode by clicking in the status bar did not expand
  currently collapsed folds, which could result in portions of the
  buffer becoming inaccessable
- Fixed ugly memory usage indicator on MacOS X
- Even when 'quick copy' was disabled in the text area option pane, the
  middle-drag feature would still be active
- Fixed ArrayIndexOutOfBoundsException when triple-clicking on the only
  line of a blank new file
- Fixed repaint slowdown that would happen when switching menus on some
  JDKs
- If the file system browser was set to show hidden files by default,
  the state of the 'show hidden files' menu item in the browser's
  "Commands" menu would be reversed
- Fixed dockable panel layout bug
- 'Select All' button in close dialog box didn't work
- Shortcuts assigned to CA+x where x was a letter didn't work. I hope
  the fix for this didn't break AltGR sequences; let me know if it did